Fixed partners on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1388,7 +1388,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     list-style: none;
     width: 100%;
     padding: 0;
-    margin: 3rem 0 0 0;
+    margin: 0;
     text-align: center;
     position: absolute;
     top: 100%;
@@ -2883,6 +2883,7 @@ html.no-csstransitions .home-content__main {
 
 .clients__slide {
     display: block;
+    float: left;
     opacity: .55;
     padding: 1.5rem 2.8rem;
     -webkit-transition: opacity 0.5s ease-in-out;
